--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
-    "react-redux": "^8.1.2",
+    "sweetalert2": "^11.7.27",
     "tailwindcss": "3.3.3",
+    "toastify": "^2.0.1",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
   }
