--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "formik": "^2.4.4",
+    "i18next": "^23.5.1",
     "js-cookie": "^3.0.5",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
